--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="source/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/5904f1ddef.js" crossorigin="anonymous"></script>
 
 </head>
@@ -35,26 +36,44 @@
         </div>
 
         <div class="apresentation-home-page">
-            <h1 class="title-sessions">Olá</h1>
-            <p class="apresentation-text">Me chamo Willyan, tenho 21 anos e sou analista e desenvolvedor de sistemas :)</p>
+            <div class="apresentation-content">
+              <h1 class="title-apresentation">Olá</h1>
+              <p class="apresentation-text">Me chamo Willyan, tenho 21 anos e sou analista e desenvolvedor de sistemas :)</p>
+            </div>
+            <div class="apresentation-image-content">
+                <img src="./source/img/code.png" alt="apresentation">
+            </div>
         </div>
 
         <div class="projects">
             
             <h1 class="title-sessions">Projects</h1>
             <div class="cards-project">
-                <div class="project-card"> Site 1</div>
-                <div class="project-card"> Site 2</div>
-                <div class="project-card"> Site 3</div>
+                <div class="project-card">
+                    <div class="card-content">
+                        Site 1
+                    </div>
+                </div>
+                <div class="project-card"> Site 2
+
+                </div>
+                <div class="project-card"> Site 3
+
+                </div>
             </div>
         </div>
         <div class="about">
-            <h1 class="title-sessions">About</h1>
+            <div class="about-content">
+                <h1 class="title-sessions">About</h1>
+            </div>
+            <div class="about-image-content">
+                <img src="./source/img/contas.jpg" alt="Content">
+            </div>
         </div>
         <div class="contact">
             <h1 class="title-sessions">Contact</h1>
 
-            <h1 class="title-sessions">Entre em contato comigo!</h1>
+            <h1 class="text-inside">Entre em contato comigo!</h1>
 
             <div class="ways-of-contact">
               <div class="media-links-contact">
@@ -66,8 +85,8 @@
                     </ul>
                 </div>
 
-                <h1 class="title-sessions">Tem algum projeto em mente?</h1>
-                <h2 class="title-sessions">Me mande sua ideia!</h2>
+                <h1 class="text-inside">Tem algum projeto em mente?</h1>
+                <h2 class="text-inside">Me mande sua ideia!</h2>
                
                 <div class="email">willyan.almeidafonseca@gmail.com
                     <i class="fa-regular fa-envelope fa-xl"></i>
