--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                </div>   
             
               <div class="about-image-content">
-                <img src="./source/img/Selfie legal.jpg" alt="Content">
+                <img src="./source/img/fotoEu.jfif" alt="Content">
              </div>
            </div>
         </div>
